Update index.html sonnet2

--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@
         </nav>
     </header>
     <main>
+        <!-- Hero Section -->
         <section class="hero-section py-20 md:py-32 text-center">
             <div class="container mx-auto px-6 max-w-4xl">
                 <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-6 text-white">
-                    Explore the World's Wonders <br> Your Journey Awaits
+                    Unlock the Wonders of the World <br> Your Adventure Awaits
                 </h1>
                 <p class="text-lg md:text-xl text-pink-100 mb-10">
-                    Discover curated museum tickets, audio guides, and immersive tours at iconic destinations.
+                    Discover curated museum tickets, audio guides, and immersive tours at iconic destinations worldwide.
                 </p>
                 <div class="bg-white p-2 rounded-full shadow-lg flex items-center justify-between max-w-xl mx-auto">
                     <input type="text" placeholder="Search for cities, attractions, or tours..." class="flex-grow p-3 rounded-full text-gray-800 focus:outline-none input-focus-ring">
@@ -77,10 +78,13 @@
                 </div>
             </div>
         </section>
+
+        <!-- Popular Experiences Section -->
         <section id="popular-experiences" class="py-16 bg-gray-50">
             <div class="container mx-auto px-6">
                 <h2 class="text-3xl md:text-4xl font-bold text-center mb-10">Top Experiences</h2>
                 <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8">
+                    <!-- Location Cards -->
                     <div class="bg-white rounded-xl overflow-hidden card-shadow">
                         <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80" alt="Eiffel Tower" class="w-full h-48 object-cover">
                         <div class="p-5">
@@ -92,10 +96,35 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Additional experience cards -->
+                    <!-- Additional location cards -->
                 </div>
             </div>
         </section>
+
+        <!-- Testimonials Section -->
+        <section id="testimonials" class="py-16 bg-white">
+            <div class="container mx-auto px-6 text-center max-w-4xl">
+                <h2 class="text-3xl md:text-4xl font-bold mb-10">What Travelers Are Saying</h2>
+                <div class="grid md:grid-cols-2 gap-10">
+                    <div class="bg-pink-50 p-6 rounded-xl shadow-lg">
+                        <p class="text-lg italic text-gray-700 mb-6">
+                            "Cosmic Tickets & Audios made planning our trip so easy! The Eiffel Tower tour was unforgettable!"
+                        </p>
+                        <p class="font-semibold text-pink-700">- Sarah L., New York</p>
+                        <div class="text-yellow-500 text-xl mt-2">★★★★★</div>
+                    </div>
+                    <div class="bg-pink-50 p-6 rounded-xl shadow-lg">
+                        <p class="text-lg italic text-gray-700 mb-6">
+                            "Excellent service! The audio guides added so much depth to our museum visits."
+                        </p>
+                        <p class="font-semibold text-pink-700">- John D., London</p>
+                        <div class="text-yellow-500 text-xl mt-2">★★★★★</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Call to Action Section -->
         <section id="cta" class="py-20 bg-fuchsia-700 text-white text-center">
             <div class="container mx-auto px-6 max-w-4xl">
                 <h2 class="text-4xl md:text-5xl font-bold leading-tight mb-6">
